--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.freemarker.expose-request-attributes=true
 upload.path=/e:/noze/idea
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=burick94@tut.by
-spring.mail.password=7924197a
+spring.mail.username=sdf@tut.by
+spring.mail.password=sdfa
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
